test/success/enums.dsk
enum Color
    let DEFAULT = Color.Green

    Red
    Blue
    Green

    func print(self: @) -> void
        echo(self)
    end
end

let red: Color = Color.Red
echo(red)

red.print()

Color.DEFAULT.print()

