test/error/invalid-struct-function.dsk
let S = struct
    x: int
    f: (self: @) -> void
        return
let s = S(x = 1)
s.g()
